This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


next version - not released yet
===============================
+ Add Indonesian and Punjabi translations
* Ticket #5450/#5479, Improved crash reporting dialog for better stability and user experience
* Updated MediaInfoLib to v0.7.75
* Updated LAV Filters to v0.65.0.26:
    - LAV Splitter: New ASF/WMV demuxer
    - LAV Video Decoder: Allow hardware decoding of UHD video with AMD cards
* Updated Arabic, Armenian, Basque, Bengali, British English, Catalan, Chinese (Simplified and Traditional),
  Croatian, Czech, Danish, Dutch, French, Galician, German, Greek, Hungarian, Japanese, Polish, Romanian,
  Russian, Slovak, Spanish, Swedish, Thai, Turkish and Vietnamese translations
! Fix a rare crash when exiting DVB mode
! Quicktime: Fix a crash when using system default renderer
! Ticket #5454, Deleting an item from the playlist sometimes did not work when shuffle mode was enabled
! Ticket #5464, If the main window was minimized while the D3D fullscreen window was displayed on another screen,
  it was impossible to use the mouse buttons to play, pause, exit fullscreen, etc.
! Ticket #5472, Make it easier to input value to the "Audio time shift" field in options
! Ticket #5496, Subtitle downloader dialog: the preferred languages were sometimes not displayed first
! Ticket #5519, SRT subtitles: Support parsing files with negative timecodes