@@ -75,7 +75,7 @@ private:
     struct DVB_CLUT {
         BYTE id = 0;
         BYTE version_number = 0;
-        BYTE size = 0;
+        WORD size = 0;
 
         std::array<HDMV_PALETTE, 256> palette;
 
